src/index.less
* {
  text-shadow: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-touch-callout: none;
}

input,
textarea {
  user-select: auto;
}

html,
body {
  position: relative;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
  font-size: 20px;
  font-family: Roboto, Noto, Helvetica, Arial, sans-serif, Microsoft Yahei;
  background: #fff;
  border: 0;
  -webkit-text-size-adjust: 100%;
}

ul,
ol {
  list-style: none;
}

a,
a:link,
a:visited,
a:hover,
a:active {
  text-decoration: none;
}

.ct-page-mask {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 9999;
  display: none;
  width: 100%;
  height: 100%;
  background: transparent;
}

.ct-page-mask > div[opt='animation'] {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 16px;
  margin-top: -8px;
  margin-left: -8px;
}

[data-ct-data-role='page'] {
  position: absolute;
  top: -999rem;
  left: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  overflow-y: hidden;
  background: #fff;
  border: 0;
  overflow-scrolling: touch;
}

[data-ct-data-role='page'].active {
  top: 0;
}

[data-ct-data-role='page'].materialShow {
  -webkit-transform: translate3d(0, 56px, 0);
  opacity: 0;
  -webkit-animation: pageMaterialShow 200ms forwards;
  animation: pageMaterialShow 200ms forwards;
}

[data-ct-data-role='page'].materialHide {
  -webkit-transform: translate3d(0, 0, 0);
  opacity: 1;
  -webkit-animation: pageMaterialHide 200ms forwards;
  animation: pageMaterialHide 200ms forwards;
}

@keyframes pageMaterialShow {
  form {
    transform: translate3d(0, 56px, 0);
    opacity: 0;
  }
  to {
    transform: translate3d(0, 0, 0);
    opacity: 1;
  }
}

@-webkit-keyframes pageMaterialShow {
  form {
    -webkit-transform: translate3d(0, 56px, 0);
    opacity: 0;
  }
  to {
    -webkit-transform: translate3d(0, 0, 0);
    opacity: 1;
  }
}

@keyframes pageMaterialHide {
  form {
    transform: translate3d(0, 0, 0);
    opacity: 1;
  }
  to {
    transform: translate3d(0, 56px, 0);
    opacity: 0;
  }
}

@-webkit-keyframes pageMaterialHide {
  form {
    -webkit-transform: translate3d(0, 0, 0);
    opacity: 1;
  }
  to {
    -webkit-transform: translate3d(0, 56px, 0);
    opacity: 0;
  }
}

